[metadata]
name = spatialtis
description = Ultra-fast spatial analysis toolkit for large-scale spatial single-cell data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mr-Milk/SpatialTis
author_email = yb97643@um.edu.mo
license = Apache License 2.0
license_file = LICENSE
classifiers =
      License :: OSI Approved :: Apache Software License
      Programming Language :: Rust
      Programming Language :: Python :: 3
      Programming Language :: Python :: 3.8
      Programming Language :: Python :: 3.9
      Programming Language :: Python :: 3.10
      Intended Audience :: Science/Research
      Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
platforms = any
python_requires = >= 3.8
install_requires =
      anndata
      numpy
      pandas
      scipy
      rich[jupyter]
      spatialtis_core
      milkviz >= 0.6.0
      legendkit >= 0.2.5
      thefuzz[speedup]

[options.extras_require]
all =
      python-igraph
      leidenalg
      scikit-image
      lightbgm
